Some translations. Slight displacement of the home/back/wide buttons to avoid overlap with slider

--- a/hd/etc/css.css
+++ b/hd/etc/css.css
@@ -39,7 +39,7 @@
 }
 
 .fixed_top_btn_wide {
-  transform: translateX(-24px);
+  transform: translateX(-34px);
 }
 
 .fixed_top_btn {
